--- a/0x01-react_intro/task_2/dashboard/src/App.css
+++ b/0x01-react_intro/task_2/dashboard/src/App.css
@@ -17,6 +17,11 @@
   margin: 50px;
 }
 
+.App-body input,
+.App-body button {
+  margin: 4px;
+}
+
 .App-footer {
   width: 100%;
   position: fixed;
