--- a/0x01-react_intro/task_2/dashboard/src/Notifications.css
+++ b/0x01-react_intro/task_2/dashboard/src/Notifications.css
@@ -1,4 +1,12 @@
 .Notifications {
-  border: solid 2px #e0344a;
+  border: dotted 2px #e0344a;
   padding: 15px;
+}
+
+ul li[data-priority='urgent'] {
+  color: red;
+}
+
+ul li[data-priority='default'] {
+  color: blue;
 }
